- Add a %fixed definition and included it into tabbar and sidebar. - Add .responstive-padding option to united-container - Refactor sidebar to work with %fixed definition - Include missing input type password + remove border-radios on iOS webkit.

--- a/src/scss/base/_form.scss
+++ b/src/scss/base/_form.scss
@@ -3,7 +3,7 @@ button, input[type="submit"], input[type="button"] {
   @extend %button;
 }
 
-input[type="text"], [type="email"], [type="phone"], [type="number"], textarea {
+input[type="text"], [type="email"], [type="phone"], [type="number"], [type="password"], textarea {
   border: 1px solid $color-grey-light;
   line-height: $line-height-big;
   font-size: $font-size-big;
@@ -11,6 +11,9 @@ input[type="text"], [type="email"], [type="phone"], [type="number"], textarea {
   color: $color-grey-dark2;
   display: block;
   width: 100%;
+  -webkit-appearance: none;
+  -webkit-border-radius:0;
+  border-radius:0;
 }
 
 input[type="checkbox"], [type="radio"] {
