--- a/src/scss/modules/_tabbar.scss
+++ b/src/scss/modules/_tabbar.scss
@@ -1,6 +1,7 @@
 
 .united-tabbar {
   @extend %box;
+  @extend %fixable;
   border-bottom-width: 2px;
 
   &.bottom {
